Mostrado pagamento na view de detalhes do pedido de compra

--- a/PSS/PSS/Views/PurchaseOrders/Details.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Details.cshtml
@@ -169,6 +169,46 @@
             </dl>
         </div>
     </div>
+
+
+    <div class="panel panel-default">
+        <div class="panel-heading">@Html.DisplayNameFor(model => model.Payment)</div>
+        <div class="panel-body">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Payment.Name)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Payment.Name)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Payment.Number)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Payment.Number)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Payment.Month)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Payment.Month)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Payment.Year)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Payment.Year)
+                </dd>
+            </dl>
+        </div>
+    </div>
 </div>
 
 <p>
