--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -144,7 +144,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Payment.Month, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EnumDropDownListFor(model => model.Payment.Month, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EnumDropDownListFor(model => model.Payment.Month, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Payment.Month, "", new { @class = "text-danger" })
                     </div>
                 </div>
