--- a/PSS/PSS/Views/SaleOrders/Index.cshtml
+++ b/PSS/PSS/Views/SaleOrders/Index.cshtml
@@ -40,9 +40,9 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.ActionLink(View.Cancel, "Cancel", new { id = item.Id }) |
+                @Html.ActionLink(View.Cancel, Actions.Cancel, new { id = item.Id }) |
                 @Html.ActionLink(View.Details, Actions.Details, new { id = item.Id }) |
-                @Html.ActionLink(View.Return, "Return", new { id = item.Id })
+                @Html.ActionLink(View.Return, Actions.Return, new { id = item.Id })
             </td>
         </tr>
     }
