--- a/PSS/PSS/Views/Users/Details.cshtml
+++ b/PSS/PSS/Views/Users/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PSS.Models.User
 @using PSS.Utils.Constants
+@using PSS.Utils.Extensions
 
 @{
     ViewBag.Title = View.Details;
@@ -64,7 +65,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Gender)
+            @Model.Gender.EnumDisplayFor()
         </dd>
 
         <dt>
@@ -72,7 +73,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserType)
+            @Model.UserType.EnumDisplayFor()
         </dd>
 
         <dt>
