--- a/PSS/PSS/Views/Products/Details.cshtml
+++ b/PSS/PSS/Views/Products/Details.cshtml
@@ -37,11 +37,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Stock)
+            @Html.DisplayNameFor(model => model.Stocks.SingleOrDefault().Quantity)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Stock)
+            @Html.DisplayFor(model => model.Stocks.OrderBy(s => s.Id).Last().Quantity)
         </dd>
 
         <dt>
