--- a/PSS/PSS/Views/PurchaseOrders/Index.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Index.cshtml
@@ -43,8 +43,7 @@
             </td>
             <td>
                 @Html.ActionLink(View.Cancel, Actions.Cancel, new { id = item.Id }) |
-                @Html.ActionLink(View.Details, Actions.Details, new { id = item.Id }) |
-                @Html.ActionLink(View.Return, Actions.Return, new { id = item.Id })
+                @Html.ActionLink(View.Details, Actions.Details, new { id = item.Id }) 
             </td>
         </tr>
     }
